platform/forgejo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: forgejo
  namespace: forgejo
spec:
  to:
    kind: Service
    name: forgejo
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
